test/testFiles/fail/prolog_fail.fcl
a :5
BEGINPROLOG
b :6
ENDPROLOG
